[package]
name = "dupper"
version = "0.2.0"
edition = "2021"
authors = ["Rubén <rubenjr0@protonmail.com>"]
license = "GPL-3.0-or-later"
description = "CLI tool to find duplicate files based on their hashes."
readme = "readme.md"
repository = "https://github.com/rubenjr0/dupper"
keywords = ["cli", "utility", "files"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["cargo"] }
eyre = "0.6.8"
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3.25"
seahash = "4.1.0"
